--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
+    "socket.io-client": "^4.8.3",
     "vite": "^7.3.1"
   },
   "devDependencies": {
